--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -98,7 +98,7 @@ div.content{
 }
 
 .post-block .panel-body{
-	padding: 15px 25px;
+	padding: 15px 25px 20px 25px;
 }
 .post-block .panel-body h3{
 	color: #bd0004;
