--- a/views/admin/common/scripts.html
+++ b/views/admin/common/scripts.html
@@ -4,11 +4,10 @@
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 <![endif]-->
-<script type="text/javascript" src='/resources/javascripts/lib/underscore-min.js'></script>
-<script type="text/javascript" src='/resources/javascripts/lib/jquery.min.js'></script>
+<script type="text/javascript" src='//cdn.staticfile.org/jquery/1.11.0/jquery.min.js'></script>
 <script type="text/javascript" src='/resources/javascripts/lib/jquery.cookie.js'></script>
 <script type="text/javascript" src='/resources/javascripts/lib/jquery.i18n.min.js'></script>
-<script type="text/javascript" src='/resources/javascripts/lib/jquery.blockUI.js'></script>
-<script type="text/javascript" src='/resources/javascripts/lib/bootstrap.min.js'></script>
-<script type="text/javascript" src='/resources/javascripts/busy.js'></script>
-<script type="text/javascript" src='/resources/javascripts/global.js'></script>
+<script type="text/javascript" src='//cdn.staticfile.org/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js' charset="utf-8"></script>
+<script type="text/javascript" src='http://cdn.staticfile.org/twitter-bootstrap/3.1.0/js/bootstrap.min.js' ></script>
+<script type="text/javascript" src='/resources/javascripts/busy.js' charset="utf-8"></script>
+<script type="text/javascript" src='/resources/javascripts/global.js' charset="utf-8"></script>
