--- a/views/page/common/styles.html
+++ b/views/page/common/styles.html
@@ -1,4 +1,4 @@
-<link rel='stylesheet' href='/resources/stylesheets/bootstrap.min.css' />
+<link rel='stylesheet' href='http://cdn.staticfile.org/twitter-bootstrap/3.1.0/css/bootstrap.min.css' />
 <link rel='stylesheet' href='/resources/stylesheets/page.css' />
 <link rel='stylesheet' href='/resources/stylesheets/signForm.css' />
 <link rel='stylesheet' href='/resources/stylesheets/navibar.css' />
