--- a/views/page/post.html
+++ b/views/page/post.html
@@ -15,7 +15,7 @@
 				<div class="panel-body">
 					<h3><%=post.title%></h3>
 					<h6><%=moment(post.create_at).format(timeFormat1)%></h6>
-					<div><%-post.content%></div>
+					<div class='post-content'><%-post.content%></div>
 				</div>
 			</div>
 		</div>
