--- a/views/page/posts.html
+++ b/views/page/posts.html
@@ -15,7 +15,7 @@
 				<div class="panel-body">
 					<h3><a href="/post/<%=item.slug%>"><%=item.title%></a></h3>
 					<h6><%=moment(item.create_at).format(timeFormat1)%></h6>
-					<div><%-item.content%></div>
+					<div class='post-content'><%-item.content%></div>
 				</div>
 			</div>
 			<%})%>
