--- a/views/admin/common/postForm.html
+++ b/views/admin/common/postForm.html
@@ -8,10 +8,10 @@
 </div>
 <div class="form-group">
 	<label for="short-desc">
-		<%=__("short-desc")%><span class='required'>*</span>
-		<span class="text-muted">(<%=__('restWord', '140')%>)</span>
+		<%=__("short-desc")%><!--<span class='required'>*</span>
+		 <span class="text-muted">(<%=__('restWord', '140')%>)</span> -->
 	</label>
-	<textarea type="text" class="form-control" id="short-desc" name='short-desc' placeholder="<%=__("short-desc")%>" rows='3' value="<%if(typeof post != "undefined") {%><%= post.short_desc%><%}%>"></textarea>
+	<textarea type="text" class="form-control" id="short_desc" name='short_desc' placeholder="<%=__("short_desc")%>" rows='3' value="<%if(typeof post != "undefined") {%><%= post.short_desc%><%}%>"></textarea>
 </div>
 <div class="form-group">
 	<label for="editor"><%=__("content")%><span class='required'>*</span></label>
