--- a/views/admin/common/scripts.html
+++ b/views/admin/common/scripts.html
@@ -5,9 +5,9 @@
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 <![endif]-->
 <script type="text/javascript" src='//cdn.staticfile.org/jquery/1.11.0/jquery.min.js'></script>
-<script type="text/javascript" src='/resources/javascripts/lib/jquery.cookie.js'></script>
+<script type="text/javascript" src='//cdn.staticfile.org/jquery-cookie/1.4.0/jquery.cookie.min.js'></script>
 <script type="text/javascript" src='/resources/javascripts/lib/jquery.i18n.min.js'></script>
 <script type="text/javascript" src='//cdn.staticfile.org/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js' charset="utf-8"></script>
-<script type="text/javascript" src='http://cdn.staticfile.org/twitter-bootstrap/3.1.0/js/bootstrap.min.js' ></script>
+<script type="text/javascript" src='//cdn.staticfile.org/twitter-bootstrap/3.1.0/js/bootstrap.min.js' ></script>
 <script type="text/javascript" src='/resources/javascripts/busy.js' charset="utf-8"></script>
 <script type="text/javascript" src='/resources/javascripts/global.js' charset="utf-8"></script>
