update the navbar

--- a/views/page/post.html
+++ b/views/page/post.html
@@ -6,11 +6,11 @@
 	<body>
 		<%- include common/top.html %>
 		<div class='content'>
-			<ol class="breadcrumb">
+			<!-- <ol class="breadcrumb">
 				<li><a href="/"><%=__('home')%></a></li>
 				<li><a href="/posts"><%=__('articleList')%></a></li>
 				<li class="active"><%=post.title%></li>
-			</ol>
+			</ol> -->
 			<div class="post-block panel panel-default">
 				<div class="panel-body">
 					<h3><%=post.title%></h3>
