--- a/views/page/posts.html
+++ b/views/page/posts.html
@@ -6,10 +6,10 @@
 	<body>
 		<%- include common/top.html %>
 		<div class='content'>
-			<ol class="breadcrumb">
+			<!-- <ol class="breadcrumb">
 				<li><a href="/"><%=__('home')%></a></li>
 				<li class="active"><%=__('articleList')%></li>
-			</ol>
+			</ol> -->
 			<%posts.forEach(function(item){%>
 			<div class="post-block panel panel-default">
 				<div class="panel-body">
