--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -73,6 +73,9 @@ label{
 }
 
 div.content{
+	max-width: 1024px;
+	margin-left: auto;
+	margin-right: auto;
 	padding-left:10px;
 	padding-right:10px;
 }
