update the navbar style

--- a/views/admin/postList.html
+++ b/views/admin/postList.html
@@ -17,10 +17,11 @@
 				<div class="panel-body">
 					<div class="list-group">
 					<% postList.forEach(function(item){ %>
-						<div class="list-group-item" id='<%=item._id%>'>
-							<a href='/admin/post/edit/<%=item._id%>'><%=item.title%></a>
-							<a href='javascript:void(0)' class='pull-right removePost glyphicon glyphicon-remove' post-id='<%=item._id%>' post-title='<%=item.title%>'></a>
-							<span class='pull-right'><%=moment(item.create_at).format(timeFormat1)%></span>
+						<div class="list-group-item row" id='<%=item._id%>'>
+							<a href='/admin/post/edit/<%=item._id%>' class='col-md-9 col-sm-8 col-xs-7'><%=item.title%></a>
+							<div class='col-md-3 col-sm-4 col-xs-5'><a href='javascript:void(0)' class='pull-right removePost glyphicon glyphicon-remove' post-id='<%=item._id%>' post-title='<%=item.title%>'></a>
+							<span class='pull-right'><%=moment(item.create_at).format(timeFormat1)%></span></div>
+							
 						</div>
 					<% }) %>
 					</div>
