--- a/public/stylesheets/navibar.css
+++ b/public/stylesheets/navibar.css
@@ -1,4 +1,8 @@
 /*Hack dropdown menu -- start*/
+.navbar{
+	border:0;
+	border-radius: 0 !important;
+}
 .navbar-default .navbar-nav>li>a{
 	color: #fff;
 }
