--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -123,3 +123,10 @@ div.content{
 	color: #fff;
 	border-radius: 3px;
 }
+
+.list-group-item.row{
+	margin-left: 5px;
+	margin-right: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
