--- a/views/page/common/top.html
+++ b/views/page/common/top.html
@@ -10,7 +10,7 @@
 	</div>
 	<div class="collapse navbar-collapse" id="navBar">
 		<ul class="nav navbar-nav">
-			<li><a href="/posts"><%=__("articleList")%></a></li>
+			<li><a href="/posts"><%=__("news")%></a></li>
 		</ul>
 		<p class="navbar-text navbar-right">
 			<a href="javascript:void(0);" class="i18n en">English</a>
