--- a/views/page/posts.html
+++ b/views/page/posts.html
@@ -19,6 +19,9 @@
 				</div>
 			</div>
 			<%})%>
+			<div class='pagination'>
+				<%=pages%> | <%=currentPage%>
+			</div>
 		</div>
 	</body>
 </html>
