--- a/views/page/posts.html
+++ b/views/page/posts.html
@@ -19,41 +19,7 @@
 				</div>
 			</div>
 			<%})%>
-			<ul class='pagination pagination-sm' currentPage='<%= currentPage %>'>
-				<% var base_url = '/posts/'; %>
-				<% if (currentPage == 1) { %>
-					<li class='disabled'><a>«</a></li>
-				<% } else { %>
-					<li><a href="<%= base_url %>">«</a></li>
-				<% } %>
-				<%
-					var page_start = currentPage - 2 > 0 ? currentPage - 2 : 1;
-					var page_end = page_start + 4 >= pages ? pages : page_start + 4;
-				%> 
-
-				<% if (page_start > 1) { %>
-					<li><a>...</a></li>
-				<% } %>
-
-				<% for(var i = page_start; i <= page_end; i++) { %>
-					<% if (i == currentPage) { %>
-						<li class='active'><a><%= i %></a></li>
-					<% } else { %>
-						<li><a href='<%= base_url + i %>'><%= i %></a></li>
-					<% } %>
-				<% } %>
-
-				<% if (page_end < pages ) { %>
-					<li><a>...</a></li>
-				<% } %>
-
-				<% if (currentPage == pages) { %>
-					<li class='disabled'><a>»</a></li>
-				<% } else { %>
-					<li><a href='<%= base_url + pages %>'>»</a></li>
-				<% } %>
-			</ul>
-			
+			<%- include common/pagination.html%>			
 		</div>
 	</body>
 </html>
