--- a/views/page/common/top.html
+++ b/views/page/common/top.html
@@ -27,6 +27,7 @@ ga('send', 'pageview');
 	<div class="collapse navbar-collapse" id="navBar">
 		<ul class="nav navbar-nav">
 			<li><a href="/posts"><%=__("news")%></a></li>
+			<li><a href="/says"><%=__("whatTheySay")%></a></li>
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=__('weixinhao')%><b class="caret"></b></a>
 				<ul class="dropdown-menu">
