--- a/views/page/says.html
+++ b/views/page/says.html
@@ -5,7 +5,14 @@
 	</head>
 	<body>
 		<%- include common/top.html %>
-		<div class='content'></div>
+		<div class='content'>
+			<% sayList.forEach(function(item){ %> 
+				<div style='margin-bottom:10px;'>
+					<img class='img-rounded' src="<%= item.user.profile_image_url%>" />
+					<span><%- item.text%></span>
+				</div>
+			<% }) %>			
+		</div>
 		<script type="text/javascript">
 			console.log(<%- JSON.stringify(sayList) %>);
 		</script>
