--- a/views/page/common/top.html
+++ b/views/page/common/top.html
@@ -22,14 +22,7 @@ ga('send', 'pageview');
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<img src="/resources/images/680_normal.png" style="
-		    width: 42px;
-		    height: 42px;
-		    margin-left: 10px;
-		    margin-top: 4px;
-		    display: inline-block;
-		    float: left;
-		" class="__web-inspector-hide-shortcut__">
+		<img src="/resources/images/680_normal.png" class="logo">
 		<a href="/" class='logo'><%=brand %></a>
 	</div>
 	<div class="collapse navbar-collapse" id="navBar">
