--- a/views/page/says.html
+++ b/views/page/says.html
@@ -7,9 +7,15 @@
 		<%- include common/top.html %>
 		<div class='content'>
 			<% sayList.forEach(function(item){ %> 
-				<div style='margin-bottom:10px;'>
-					<img class='img-rounded' src="<%= item.user.profile_image_url%>" />
-					<span><%- item.text%></span>
+				<div style='margin-bottom:10px;' class='clearfix'>
+					<div class='pull-left col-xs-2 col-sm-1'>
+						<img class='img-rounded' style='margin-top:2px;' src="<%= item.user.profile_image_url%>"  />
+					</div>
+					
+					<div class='pull-left col-xs-10 col-sm-11' style='min-height:50px;'>
+						<div><%= item.user.name%></div>
+						<p style='white-space: pre-wrap;word-wrap: break-word;'><%= item.text%></p>
+					</div>
 				</div>
 			<% }) %>			
 		</div>
