update the container class

--- a/views/page/members.html
+++ b/views/page/members.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<%- include common/top.html %>
-		<div class='content'>
+		<div class='container'>
 			<%posts.forEach(function(item){%>
 			<div class="post-block panel panel-default">
 				<div class="panel-body">
