--- a/views/page/post.html
+++ b/views/page/post.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<%- include common/top.html %>
-		<div class='content'>
+		<div class='container'>
 			<div class="post-block panel panel-default">
 				<div class="panel-body">
 					<h3><%=post.title%></h3>
