--- a/views/page/posts.html
+++ b/views/page/posts.html
@@ -5,11 +5,7 @@
 	</head>
 	<body>
 		<%- include common/top.html %>
-		<div class='content'>
-			<!-- <ol class="breadcrumb">
-				<li><a href="/"><%=__('home')%></a></li>
-				<li class="active"><%=__('articleList')%></li>
-			</ol> -->
+		<div class='container'>
 			<%posts.forEach(function(item){%>
 			<div class="post-block panel panel-default">
 				<div class="panel-body">
