--- a/views/page/says.html
+++ b/views/page/says.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<%- include common/top.html %>
-		<div class='content'>
+		<div class='container'>
 			<% sayList.forEach(function(item){ %> 
 				<div style='margin-bottom:10px;' class='clearfix'>
 					<div class='pull-left col-xs-2 col-sm-1'>
