update the admin pages

--- a/views/admin/postList.html
+++ b/views/admin/postList.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<%- include common/top.html %>
-		<div class='content'>
+		<div class='container'>
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<ol class="breadcrumb">
