--- a/views/admin/common/top.html
+++ b/views/admin/common/top.html
@@ -6,6 +6,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
+		<img src="/resources/images/680_normal.png" class="logo">
 		<a href="/admin" class='logo'><%=brand %></a>
 	</div>
 	<div class="collapse navbar-collapse" id="navBar">
@@ -19,6 +20,7 @@
 					<li><a href="/admin/post/new"><%=__("newArticle")%></a></li>
 				</ul>
 			</li>
+			<li><a href="/admin/says"><%=__("whatTheySay")%></a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<% if(locals.session.admin_id) {%>
