--- a/views/admin/profile.html
+++ b/views/admin/profile.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<%- include common/top.html %>
-		<div class='content'>
+		<div class='container'>
 			<div class="panel panel-default">
 				<div class="panel-heading"><%= __("changePwd") %></div>
 				<div class="panel-body">
