--- a/views/page/common/styles.html
+++ b/views/page/common/styles.html
@@ -2,3 +2,4 @@
 <link rel='stylesheet' href='/resources/stylesheets/page.css' />
 <link rel='stylesheet' href='/resources/stylesheets/signForm.css' />
 <link rel='stylesheet' href='/resources/stylesheets/navibar.css' />
+<link rel='stylesheet' href='/resources/stylesheets/footer.css' />
