--- a/views/page/common/top.html
+++ b/views/page/common/top.html
@@ -14,7 +14,7 @@
 ga('create', 'UA-35990626-2', 'manunited7.com');
 ga('send', 'pageview');
 </script>
-<nav class="header navbar navbar-default" role="navigation">
+<div class="header navbar navbar-default" role="navigation">
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navBar">
 			<span class="sr-only">Toggle navigation</span>
@@ -48,5 +48,4 @@ ga('send', 'pageview');
 			<%}%>
 		</ul>
 	</div>
-</nav>
-<!-- <a href="javascript:void(0);" class="i18n en">English</a><a href="javascript:void(0);" class="i18n zh">中文</a> -->
+</div>
