--- a/views/page/members.html
+++ b/views/page/members.html
@@ -16,6 +16,7 @@
 			</div>
 			<%})%>
 			<%- include common/pagination.html%>			
-		</div>
+		</div>		
+		<%- include common/footer.html%>
 	</body>
 </html>
