--- a/views/page/post.html
+++ b/views/page/post.html
@@ -23,7 +23,8 @@
 					<div class='post-content clearfix'><%-post.content%></div>
 				</div>
 			</div>
-		</div>		
+		</div>
+		<%- include common/footer.html%>
 		<script type="text/javascript">
 			var jiathis_config = {data_track_clickback:'true'};
 		</script>
