--- a/views/page/common/scripts.html
+++ b/views/page/common/scripts.html
@@ -4,6 +4,7 @@
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 <![endif]-->
+<script type="text/javascript" src='//cdn.staticfile.org/underscore.js/1.6.0/underscore-min.js'></script>
 <script type="text/javascript" src='//cdn.staticfile.org/jquery/1.11.0/jquery.min.js'></script>
 <script type="text/javascript" src='//cdn.staticfile.org/jquery-cookie/1.4.0/jquery.cookie.min.js'></script>
 <script type="text/javascript" src='/resources/javascripts/lib/jquery.i18n.min.js'></script>
