--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -4,6 +4,7 @@
 		<%- include common/head.html %>
 	</head>
 	<body>
-		<%- include common/top.html %>		
+		<%- include common/top.html %>
+		<%- include ../common/footer.html%>
 	</body>
 </html>
