--- a/views/admin/install.html
+++ b/views/admin/install.html
@@ -25,6 +25,7 @@
 				<p>已经初始化过数据库了</p>
 			<% } %>
 		</form>
+		<%- include ../common/footer.html%>
 		<script type="text/javascript" src='/resources/javascripts/admin/install.js'></script>
 	</body>
 </html>
