--- a/views/admin/says.html
+++ b/views/admin/says.html
@@ -19,6 +19,7 @@
 				</div>
 			<% }) %>			
 		</div>
+		<%- include ../common/footer.html%>
 		<script type="text/javascript">
 			console.log(<%- JSON.stringify(sayList) %>);
 		</script>
