--- a/views/page/common/head.html
+++ b/views/page/common/head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="icon" type="image/png" href="/resources/images/ico/united.png" />
+<%- include ../../common/favicon.html %>
 <meta property="wb:webmaster" content="314d2fb8528c02ad" />
 <%- include title.html %>
 <%- include styles.html %>
