--- a/views/page/common/styles.html
+++ b/views/page/common/styles.html
@@ -1,5 +1,7 @@
-<link rel='stylesheet' href='http://cdn.staticfile.org/twitter-bootstrap/3.1.0/css/bootstrap.min.css' />
+<link rel='stylesheet' href='//cdn.staticfile.org/twitter-bootstrap/3.1.0/css/bootstrap.min.css' />
 <link rel='stylesheet' href='/resources/stylesheets/page.css' />
 <link rel='stylesheet' href='/resources/stylesheets/signForm.css' />
 <link rel='stylesheet' href='/resources/stylesheets/navibar.css' />
 <link rel='stylesheet' href='/resources/stylesheets/footer.css' />
+<link rel='stylesheet' href='/resources/stylesheets/post.css' />
+<link rel='stylesheet' href='/resources/stylesheets/pagination.css' />
