--- a/views/page/members.html
+++ b/views/page/members.html
@@ -17,6 +17,6 @@
 			<%})%>
 			<%- include common/pagination.html%>			
 		</div>		
-		<%- include common/footer.html%>
+		<%- include ../common/footer.html%>
 	</body>
 </html>
