--- a/views/page/posts.html
+++ b/views/page/posts.html
@@ -15,8 +15,8 @@
 				</div>
 			</div>
 			<%})%>
-			<%- include common/pagination.html%>			
+			<%- include common/pagination.html%>		
 		</div>		
-		<%- include common/footer.html%>
+		<%- include ../common/footer.html%>
 	</body>
 </html>
