--- a/views/admin/postList.html
+++ b/views/admin/postList.html
@@ -6,7 +6,7 @@
 	<body>
 		<%- include common/top.html %>
 		<div class='container'>
-			<div class="panel panel-default">
+			<div class="post-list panel panel-default">
 				<div class="panel-heading">
 					<ol class="breadcrumb">
 						<li><a href="/admin"><%= __("home")%></a></li>
@@ -28,6 +28,7 @@
 				</div>
 			</div>
 		</div>
+		<%- include ../common/footer.html%>
 		<script type="text/javascript" src='/resources/javascripts/modal.js'></script>
 		<script type="text/javascript" src='/resources/javascripts/admin/postList.js'></script>
 	</body>
