--- a/views/admin/postNew.html
+++ b/views/admin/postNew.html
@@ -14,7 +14,7 @@
 				<div class="panel-heading">
 					<ol class="breadcrumb">
 						<li><a href="/admin"><%= __("home")%></a></li>
-						<li><a href="/admin/post"><%= __("articleList")%></a></li>
+						<li><a href="/admin/posts"><%= __("articleList")%></a></li>
 						<li class="active"><%= __("newArticle") %></li>
 					</ol>
 				</div>
@@ -29,6 +29,7 @@
 				</div>
 			</div>
 		</div>
+		<%- include ../common/footer.html%>
 		<script type="text/javascript" src='/resources/javascripts/admin/postNewEdit.js'></script>
 	</body>
 </html>
