--- a/views/admin/profile.html
+++ b/views/admin/profile.html
@@ -36,6 +36,7 @@
 				</div>
 			</div>
 		</div>
+		<%- include ../common/footer.html%>
 		<script type="text/javascript" src='/resources/javascripts/admin/profile.js'></script>
 	</body>
 </html>
