--- a/views/page/post.html
+++ b/views/page/post.html
@@ -24,7 +24,7 @@
 				</div>
 			</div>
 		</div>
-		<%- include common/footer.html%>
+		<%- include ../common/footer.html%>
 		<script type="text/javascript">
 			var jiathis_config = {data_track_clickback:'true'};
 		</script>
