--- a/views/page/says.html
+++ b/views/page/says.html
@@ -19,7 +19,7 @@
 				</div>
 			<% }) %>			
 		</div>
-		<%- include common/footer.html%>
+		<%- include ../common/footer.html%>
 		<script type="text/javascript">
 			console.log(<%- JSON.stringify(sayList) %>);
 		</script>
