--- a/views/page/timeline.html
+++ b/views/page/timeline.html
@@ -18,7 +18,7 @@
 				</div>
 			</div>
 		</div>
-		<%- include common/footer.html%>
+		<%- include ../common/footer.html%>
 		<script type="text/javascript" src='/resources/javascripts/timeline.js' charset="utf-8"></script>
 	</body>
 </html>
