--- a/views/admin/timeline.html
+++ b/views/admin/timeline.html
@@ -7,15 +7,13 @@
 		<%- include common/top.html %>
 		<div class='container'>
 			<div class="panel panel-default">
-				<div class="panel-heading"><%=__('edit')%><%=__('timeline')%></div>
+				<div class="panel-heading"><%=__('edit')%> <%=__('timeline')%></div>
 				<div class="panel-body" style='padding:15px;'>
-					<div class='list-group'>
-						<div class="list-group-item row">
-							<div>
-								<input class="form-control input-sm" type="text" placeholder="Year" />
-							</div>
-						</div>
+					<div class='list-group timeline'>
 					</div>
+				</div>
+				<div class="panel-footer">
+					<button></button>
 				</div>
 			</div>
 		</div>
