--- a/views/common/scripts.html
+++ b/views/common/scripts.html
@@ -11,4 +11,5 @@
 <script type="text/javascript" src='//cdn.staticfile.org/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js'></script>
 <script type="text/javascript" src='//cdn.staticfile.org/twitter-bootstrap/3.1.0/js/bootstrap.min.js' ></script>
 <script type="text/javascript" src='/resources/javascripts/busy.js'></script>
+<script type="text/javascript" src='/resources/javascripts/modal.js'></script>
 <script type="text/javascript" src='/resources/javascripts/global.js'></script>
