--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<%- include common/top.html %>
+		<div class='container'></div>
 		<%- include ../common/footer.html%>
 	</body>
 </html>
