Update the top.html to hide the login button

--- a/views/page/common/top.html
+++ b/views/page/common/top.html
@@ -40,12 +40,12 @@ ga('send', 'pageview');
 		<ul class="nav navbar-nav navbar-right">
 			<li><a href="javascript:void(0);" class="i18n en">English</a></li>
 			<li><a href="javascript:void(0);" class="i18n zh">中文</a></li>
-			<% if(locals.session.user_id) {%>
+			<!-- <% if(locals.session.user_id) {%>
 				<li><a href='/profile'><%= locals.session.user_name%></a></li>
 				<li><a href='/logout' class='logout glyphicon glyphicon-off'></a></li>
 			<%} else {%>
 				<li><a href='/login'><%=__("signIn")%></a></li>
-			<%}%>
+			<%}%> -->
 		</ul>
 	</div>
 </div>
