--- a/views/common/scripts.html
+++ b/views/common/scripts.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src='//cdn.staticfile.org/jquery-i18n/1.1.1/jquery.i18n.min.js'></script>
 <script type="text/javascript" src='//cdn.staticfile.org/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js'></script>
 <script type="text/javascript" src='//cdn.staticfile.org/twitter-bootstrap/3.1.0/js/bootstrap.min.js' ></script>
+<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js'></script>
 <script type="text/javascript" src='/resources/javascripts/busy.js'></script>
 <script type="text/javascript" src='/resources/javascripts/modal.js'></script>
 <script type="text/javascript" src='/resources/javascripts/global.js'></script>
